# C_TextEditor_Persian_01

./: CMakeLists.txt  README.md  main.c
Debug/: a.nevise
ViMa/: 01.c  02.c  03.c  04.c  05.c  06.c  ViMa.c
